--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.office365.com
 MAIL_PORT=587
 MAIL_USERNAME=webshopfrance@stauffsa.com
-MAIL_PASSWORD=Cax12940
+MAIL_PASSWORD=Lax26880
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=webshopfrance@stauffsa.com
 MAIL_FROM_NAME=STAUFF
