--- a/.env
+++ b/.env
@@ -27,23 +27,23 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-#MAIL_DRIVER=mail
-#MAIL_HOST=smtp.gmail.com
-#MAIL_PORT=587
-#MAIL_USERNAME=stauff.sa@gmail.com
-#MAIL_PASSWORD=qrnzpifqmwtgolet
-#MAIL_ENCRYPTION=tls
-#MAIL_FROM_ADDRESS=stauff.sa@gmail.com
-#MAIL_FROM_NAME=STAUFF
-
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.office365.com
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=webshopfrance@stauffsa.com
-MAIL_PASSWORD=Lax26880
+MAIL_USERNAME=stauff.sa@gmail.com
+MAIL_PASSWORD=qrnzpifqmwtgolet
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=webshopfrance@stauffsa.com
+MAIL_FROM_ADDRESS=stauff.sa@gmail.com
 MAIL_FROM_NAME=STAUFF
+
+#MAIL_DRIVER=smtp
+#MAIL_HOST=smtp.office365.com
+#MAIL_PORT=587
+#MAIL_USERNAME=webshopfrance@stauffsa.com
+#MAIL_PASSWORD=Jaju2019!@kmfs6w
+#MAIL_ENCRYPTION=tls
+#MAIL_FROM_ADDRESS=webshopfrance@stauffsa.com
+#MAIL_FROM_NAME=STAUFF
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
